# DeepCritical

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.md  PR_DESCRIPTION.md  RAY-PRECOMMIT-WORKFLOW.md  README.md  WHY_THIS_FORK_IS_ABANDONED.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  contributors.yml
DeepResearch/: agents.py  app.py
DeepResearch/examples/: mgrep_e2e_demo.py
DeepResearch/src/: workflow_patterns.py
DeepResearch/src/agents/: agent_orchestrator.py  bioinformatics_agents.py  code_execution_orchestrator.py  code_generation_agent.py  code_improvement_agent.py  deep_agent_implementations.py  multi_agent_coordinator.py  rag_agent.py  search_agent.py  vllm_agent.py  workflow_orchestrator.py  workflow_pattern_agents.py
DeepResearch/src/datatypes/: agent_framework_options.py  bioinformatics_mcp.py  chunk_dataclass.py  embeddings_factory.py  llamaindex_types.py  mcp.py  middleware.py  neo4j_types.py  postgres_dataclass.py  pydantic_ai_tools.py  rag.py  search_agent.py  sentence_transformer_embeddings.py  vllm_dataclass.py  vllm_integration.py  workflow_orchestration.py  workflow_patterns.py
DeepResearch/src/ingestion/: document_parser.py  file_filter.py  file_watcher.py  indexing_pipeline.py
DeepResearch/src/models/: openai_compatible_model.py
DeepResearch/src/prompts/: bioinformatics_agent_implementations.py  neo4j_queries.py
DeepResearch/src/statemachines/: code_execution_workflow.py  deep_agent_graph.py  rag_workflow.py  search_workflow.py
DeepResearch/src/tools/: bioinformatics_tools.py  deepsearch_workflow_tool.py  mcp_server_tools.py  mgrep_server.py  mgrep_tool.py  neo4j_tools.py  openalex_tools.py  semantic_analysis_tools.py  vosviewer_tools.py  web_scrapper_patents.py
DeepResearch/src/utils/: chunking.py  code_utils.py  config_loader.py  deepsearch_utils.py  docker_compose_deployer.py  execution_history.py  neo4j_author_fix.py  neo4j_complete_data.py  neo4j_connection.py  neo4j_connection_test.py  neo4j_crossref.py  neo4j_embeddings.py  neo4j_migrations.py  neo4j_rebuild.py  neo4j_vector_search.py  neo4j_vector_search_cli.py  neo4j_vector_setup.py  pydantic_ai_utils.py  python_code_execution.py  testcontainers_deployer.py  vllm_client.py  workflow_middleware.py
DeepResearch/src/vector_stores/: __init__.py  faiss_config.py  faiss_vector_store.py  neo4j_config.py  neo4j_vector_store.py
configs/: config.yaml
configs/db/: neo4j.yaml
configs/ingestion/: default.yaml
configs/models/: default.yaml
configs/neo4j/: orchestrator.yaml
configs/neo4j/operations/: rebuild_database.yaml  setup_database.yaml  test_connection.yaml
configs/rag/: default.yaml
configs/rag/embeddings/: mixedbread.yaml  sentence_transformers.yaml
configs/rag/vector_store/: faiss.yaml  neo4j.yaml
configs/statemachines/flows/: neo4j.yaml
configs/tools/: mgrep.yaml
docs/api/: tools.md
docs/configuration/: model-configuration.md
docs/development/: TYPE_ERROR_PROGRESS.md
docs/getting-started/: installation.md
docs/user-guide/tools/: bioinformatics.md  neo4j-integration.md  rag.md
examples/mgrep_semantic_search/: README.md  agentic_demo.py  mgrep_agent.py  mgrep_deps.py  simple_demo.py
examples/simple_genomics_discovery/: README.md  agent_demo.py  download_data.sh  genomics_agent.py  genomics_deps.py  install_tools.sh  run_agent_demo.py
memory_specs/: ANCIENT_GOODNESS_ASSESSMENT.md  ANCIENT_GOODNESS_SUMMARY.md  AUDIT_PHASE2_PHASE3.md  AUDIT_PHASE4.md  GH_ISSUE_MEMORY_BRAINSTORM.md  MEMORY_BRAINSTORM.md  META_PLAN.MD  PHASE_1_BASELINE_FOUNDATION.md  PHASE_2_MEMORY_RESEARCH.md  PHASE_3_IMPLEMENTATION_SPEC.md  PHASE_4A_CORE_INTERFACE.md  PHASE_4B_MEM0_ADAPTER.md  PHASE_4C_AGENT_WIRING.md  PHASE_4D_PILOT_EXECUTION.md  PHASE_4_READY_FOR_IMPLEMENTATION.md  PHASE_4_VALIDATION_REPORT.md  README.md  VALIDATION_PROMPT.md  referencerepos.md
memory_specs/deeper_brainstorm/: GMEM_OMEM_HYPOTHESIS.md
scripts/: fix_hardcoded_models.py  fix_remaining_hardcoded_models.sh  neo4j_orchestrator.py  publish_docker_images.py  update_contributors.py
scripts/prompt_testing/: run_vllm_tests.py  test_matrix_functionality.py  test_prompts_vllm_base.py  testcontainers_vllm.py
scripts/test/: run_containerized_tests.py  test_report_generator.py
tests/: test_ag2_integration.py  test_neo4j_vector_store.py  testcontainers_vllm.py
tests/fixtures/gatk/: __init__.py  conftest.py
tests/imports/: test_app_imports.py
tests/test_bioinformatics_tools/: test_gunzip_server.py  test_haplotypecaller_server.py
tests/test_embeddings/: test_mixedbread_config.py  test_sentence_transformers.py
tests/test_examples/: test_genomics_agent.py  test_genomics_agent_demo.py  test_genomics_agent_mcp.py  test_genomics_agent_tools.py  test_simple_genomics_discovery.py
tests/test_ingestion/: test_document_parser.py  test_file_filter.py  test_file_filter_exclude.py  test_file_watcher.py  test_file_watcher_initial_scan.py  test_indexing_pipeline.py  test_openai_error.py
tests/test_integration/: conftest.py  test_faiss_integration.py  test_ingestion_e2e.py
tests/test_prompts_vllm/: test_prompts_vllm_base.py
tests/test_pydantic_ai/: conftest.py  test_integration.py
tests/test_pydantic_ai/test_agent_framework/: __init__.py  test_agent_initialization.py  test_context_management.py  test_dependency_injection.py  test_tool_registration.py
tests/test_pydantic_ai/test_agent_workflows/: test_agent_communication.py  test_single_agent.py  test_workflow_states.py
tests/test_pydantic_ai/test_performance/: __init__.py  test_concurrent_execution.py  (+3 more)
tests/test_statemachines/: test_execution_patterns.py  test_finalization_nodes.py  test_process_results.py  test_pydantic_graph_fallback.py  test_validation_nodes.py  test_workflow_graph_creation.py  test_workflow_patterns.py
tests/test_tools/: conftest.py  test_mcp_integration.py  test_mcp_pydantic_ai_tools.py  test_mcp_server_manager.py  test_mcp_tool_runners.py
tests/test_utils/: test_chunking.py  test_workflow_events.py
tests/utils/: async_utils.py
tests/vector_stores/: test_faiss_vector_store.py
(+24 files in other folders)
